# sls-uma-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  samconfig.toml  template.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/:  issue--feature-request-.md  bug_report.md
.github/workflows/: build.yaml  feature-check.yaml  fmt-lint.yaml
lambda/auth/login/: Cargo.toml
lambda/auth/login/src/: main.rs  requests.rs
lambda/auth/signup/: Cargo.toml
lambda/auth/signup/src/: main.rs  requests.rs
lambda/tokens/refresh/: Cargo.toml
lambda/tokens/refresh/src/: main.rs  requests.rs
lambda/tokens/validate/: Cargo.toml
lambda/tokens/validate/src/: main.rs  requests.rs
lambda/users/create/: Cargo.toml
lambda/users/create/src/: main.rs  requests.rs
lambda/users/delete/: Cargo.toml
lambda/users/delete/src/: main.rs  requests.rs
lambda/users/get/: Cargo.toml
lambda/users/get/src/: main.rs  requests.rs
lambda/users/update/: Cargo.toml
lambda/users/update/src/: main.rs  requests.rs
shared/: Cargo.toml
shared/src/: cache_manager.rs  client_manager.rs  config.rs  errors.rs  lib.rs
shared/src/aws/: mod.rs
shared/src/aws/cognito/: client.rs  error.rs  mod.rs  token_authorizer.rs
shared/src/aws/dynamodb/: client.rs  error.rs
shared/src/aws/lambda_events/: request.rs  response.rs
shared/src/aws/secret_manager/: client.rs  error.rs
shared/src/entity/: mod.rs  secrets.rs  user.rs
shared/src/repository/: user_repository.rs
shared/src/tracer/: mod.rs
shared/src/utils/: env.rs  mod.rs  password.rs  regex.rs  uuid.rs
