[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config.workspace = true
aws_lambda_events.workspace = true
aws-sdk-cognitoidentityprovider.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-secretsmanager.workspace = true
lambda_runtime.workspace = true

async-trait.workspace = true
anyhow.workspace = true
futures.workspace = true
opentelemetry.workspace = true
opentelemetry-aws.workspace = true
opentelemetry_sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true

bitflags = { version = "2.6.0", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
thiserror = "1.0.65"
jsonwebtoken = "9.3.0"
passwords = "3.1.16"
