[package]
name = "auth-login"
version = "0.1.0"
edition = "2021"

[dependencies]
shared.workspace = true

aws_lambda_events.workspace = true
lambda_runtime.workspace = true

tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
thiserror.workspace = true
regex.workspace = true
bytes.workspace = true
moka.workspace = true
mimalloc.workspace = true
jsonwebtoken.workspace = true
