[package]
name = "tokens-refresh"
version = "0.1.0"
edition = "2021"

[dependencies]
shared.workspace = true

aws_lambda_events.workspace = true
lambda_runtime.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
